Fix About & Contact margin-top on Tablet styles

--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -32,3 +32,9 @@
 
     .map {}
 }
+
+@media (max-width: 850px) {
+    .wrapper {
+        margin-top: 125px;
+    }
+}
